images/devtools-kubernetes-v1beta1/context/magefiles/tests/kustomize/overlay/staging/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld
  labels:
    tags.datadoghq.com/env: "staging"
spec:
  template:
    metadata:
      labels:
        tags.datadoghq.com/env: "staging"
