images/devtools-kubernetes-v1beta1/context/magefiles/tests/kustomize/overlay/staging/virtualservice.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: helloworld
spec:
  hosts:
  - api.staging.coop
